// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveImage /> with a shimmer prop renders the image with state={ imageLoaded: true } 1`] = `
<img
  alt="bar"
  className="image-0-2-1 inline-0-0-2-4"
  height="auto"
  src="foo"
  width="100%"
/>
`;

exports[`<ResponsiveImage /> with a shimmer prop renders the shimmer component while the image is loading 1`] = `
<Shimmer
  block={true}
/>
`;

exports[`<ResponsiveImage /> without a shimmer prop renders the image element while the image is loading 1`] = `
<img
  alt="bar"
  className="image-0-2-1 inline-0-0-2-5"
  height="auto"
  src="foo"
  width="100%"
/>
`;

exports[`<ResponsiveImage /> without a shimmer prop renders the image element with state={ imageLoaded: true } 1`] = `
<img
  alt="bar"
  className="image-0-2-1 inline-0-0-2-6"
  height="auto"
  src="foo"
  width="100%"
/>
`;
